feat: Add GitHub Pages deployment and deep dive enhancements
- Add GitHub Actions workflow for automated deployment to GitHub Pages
- Configure secure API key handling via GitHub secrets
- Add deployment documentation and TODO tracking
- Enhance deep dive chat with principle-specific introductions
- Enable Google Search integration for real-time information
- Optimize Anna's responses to be more concise (2-3 sentences)
- Implement follow-up questions for better user engagement
- Fix audio playback to only mention domain names, not full URLs
- Remove React StrictMode to prevent double-playing audio issue
- Update .gitignore to exclude development tools and standalone files
- Add TypeScript environment variable definitions

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,13 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment variables
+.env
+
+# Development tools
+.claude/
+nul
+
+# Standalone files
+standalone.html
